--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@nuxtjs/i18n": "^8.0.0-beta.9",
     "material-design-icons-iconfont": "^6.7.0",
     "nuxt": "^3.4.0",
-    "vuepress": "^2.0.0-beta.61"
+    "vite-plugin-svg-icons": "^2.0.1"
   },
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
     "copy-to-clipboard": "^3.3.3",
+    "dayjs": "^1.11.8",
     "highlight.js": "^11.7.0",
     "http-proxy-middleware": "3.0.0-beta.1",
     "is-mobile": "^3.1.1",
+    "js-cookie": "^3.0.5",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.2",
     "markdown-it": "^13.0.1",
     "markdown-it-mathjax3": "^4.3.2",
     "nanoid": "^4.0.1",
